<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/twenty"
    android:paddingVertical="@dimen/thirty"
    android:layout_height="match_parent"
    tools:context=".ProviderView.AfterRegister">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/service_quest"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/ten"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="Pilih jenis layanan yang akan anda tawarkan"
        android:textSize="12sp"
        android:layout_marginBottom="@dimen/ten"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/c_service"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_marginBottom="@dimen/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Bus"
            android:text="@string/title_bus"
            />
        <RadioButton
            android:id="@+id/Plane"
            android:layout_marginBottom="@dimen/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_plane"
            />
        <RadioButton
            android:id="@+id/Train"
            android:layout_marginBottom="@dimen/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_train"
            />
        <RadioButton
            android:id="@+id/Boat"
            android:layout_marginBottom="@dimen/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_boat"
            />
        <RadioButton
            android:id="@+id/Hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel"
            android:layout_marginBottom="@dimen/ten"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_save_choice"
            android:background="@drawable/button_border2"
            android:textColor="@color/textWhite"
            android:text="@string/save"
            />

    </RadioGroup>

</LinearLayout>