<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderView.EditResort">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/twenty"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/five"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:padding="@dimen/ten"
                android:textSize="12sp"
                android:hint="Deskripsi Singkat"
                android:layout_marginBottom="@dimen/five"
                android:inputType="textMultiLine"
                android:id="@+id/i_r_description"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_day"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dmon"
                    android:text="@string/monday"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dtue"
                    android:text="@string/tuesday"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dwed"
                    android:text="@string/wednesday"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dthu"
                    android:text="@string/thursday"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dfri"
                    android:text="@string/friday"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/i_r_dsat"
                    android:text="@string/saturday"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <CheckBox
                android:layout_width="match_parent"
                android:text="@string/sunday"
                android:id="@+id/i_r_dsun"
                android:layout_marginBottom="@dimen/ten"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/five"
                android:text="@string/time_open"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/ten"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="time"
                    android:background="@drawable/input_border"
                    android:padding="@dimen/ten"
                    android:textSize="12sp"
                    android:id="@+id/i_r_open"
                    android:hint="@string/time_open"
                    android:editable="false"
                    android:clickable="true"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="time"
                    android:background="@drawable/input_border"
                    android:padding="@dimen/ten"
                    android:textSize="12sp"
                    android:hint="@string/time_close"
                    android:id="@+id/i_r_close"
                    android:clickable="true"
                    android:editable="false"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/r_price"
                android:layout_marginBottom="@dimen/five"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_marginBottom="@dimen/twenty"
                android:id="@+id/i_r_price"
                android:background="@drawable/input_border"
                android:padding="@dimen/ten"
                android:textSize="12sp"
                android:hint="Harga Masuk"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:background="@drawable/button_border2"
                android:textColor="@color/textWhite"
                android:text="@string/save"
                android:textAllCaps="false"
                android:id="@+id/btn_save"
                android:layout_marginBottom="@dimen/twenty"
                android:layout_height="wrap_content" />
        </LinearLayout>

</ScrollView>