<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderView.ProviderDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/twenty"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/five"
            android:text="@string/company_name"
            />
        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:padding="@dimen/ten"
            android:textSize="12sp"
            android:layout_marginBottom="@dimen/five"
            android:hint="@string/company_name"
            android:id="@+id/i_p_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginBottom="@dimen/five"
            />
        <EditText
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:padding="@dimen/ten"
            android:textSize="12sp"
            android:hint="@string/address"
            android:layout_marginBottom="@dimen/five"
            android:id="@+id/i_p_address"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="@dimen/five"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:padding="@dimen/ten"
            android:textSize="12sp"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/five"
            android:id="@+id/i_p_email"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginBottom="@dimen/five"
            />
        <EditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:padding="@dimen/ten"
            android:textSize="12sp"
            android:hint="@string/phone"
            android:layout_marginBottom="@dimen/five"
            android:id="@+id/i_p_phone"
            />
        <TextView
            android:layout_width="match_parent"
            android:text="@string/service_quest"
            android:layout_marginBottom="@dimen/ten"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/i_p_sector"
            android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/Bus"
                    android:text="@string/title_bus"
                    />
                <RadioButton
                    android:id="@+id/Plane"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_plane"
                    />

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/Train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_train"
                    />
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/Boat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_boat"
                    />

                <RadioButton
                    android:id="@+id/Hotel"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel"
                    />
                <!--<RadioButton-->
                    <!--android:id="@+id/Wisata"-->
                    <!--android:layout_weight="1"-->
                    <!---->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/resort"-->
                    <!--/>-->
        </RadioGroup>
                <Button
                    android:layout_marginTop="@dimen/ten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_detail_provider"
                    android:textColor="@color/textWhite"
                    android:textAllCaps="false"
                    android:background="@drawable/button_border2"
                    android:text="@string/save"
                    android:layout_marginBottom="30dp"
                    />
        </LinearLayout>
</ScrollView>